# graphontology

./: .gitignore  README.md  pyproject.toml
data/: README.md  category_tree.txt
graphontology/: definitions.py  generate_tree_json.py  init_ontology_tables.py  init_ontology_tree.py
graphontology/utils/: common_utils.py  config.py  init_ontology_tree.py
queries/: add_depth_3_and_4_categories.sql  add_depth_4_category.sql  create_new_depth_3_and_4_cats.sql  create_new_depth_4_cat.sql  insert_new_concepts_existing_cluster.sql  insert_new_concepts_new_cluster.sql  move_ cluster.sql  move_cluster.sql  split_and_move_cluster.sql
tools/: README.md  category_tree_txt_to_json.py
